# Gaussian-Splatting-SLAM

./: .gitignore  README.md  pipeline.py  pyproject.toml
gaussian_splatting_slam/: config.py  model.py  pipeline.py
gaussian_splatting_slam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gaussian_splatting_slam/outputs/camera_pose2/gaussian_splatting_slam/2024-05-02_105334/: config.yml
my_method/: config.py  model.py  pipeline.py  tracker.py
my_method.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_method/outputs/bww_entrance/my_method/2024-04-04_111510/: config.yml
