[project]
name = "gaussian_splatting_slam"
version = "1.0.0"

dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["gaussian_splatting_slam*"]

[project.entry-points.'nerfstudio.method_configs']
my-method = 'gaussian_splatting_slam.config:Method'